--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Mary Vokicic",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-scss-lint": "^0.3.6"
