--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.1",
   "description": "Gridly - Grid Set Light - vomar.de",
   "author": "Mary Vokicic",
-  "devDependencies": {
+
+  "licenses": [
+    {
+        "type": "MIT",
+        "url": "https://github.com/marymar/gridly/blob/master/LICENSE"
+    }],
+
+    "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-copy": "^0.8.0",
